--- a/web-site/src/html/index.html
+++ b/web-site/src/html/index.html
@@ -18,9 +18,15 @@
         <nav>
             <ul>
                 <li><a id="active" href="index.html">Accueil</a></li>
-                <li><a href="../php/telephones.php">Téléphones</a></li>
+                <li><a href="../php/telephones.php">Téléphones</a></li> 
             </ul>
         </nav>
+        <div class="connection">
+            <ul>
+                <li><a href="#">Sign In</a></li>
+                <li><a id="signUp" href="#">Sign Up</a></li>
+            </ul>
+        </div>
     </header>
     <!-- Balises pour l'animation du soleil et la lune -->
     <div class="sun"></div>
