Login + register FINI, avatars EN COURS

--- a/web-site/index.html
+++ b/web-site/index.html
@@ -9,7 +9,7 @@
 		-->
     <title>Redirection vers le site</title>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=src/html/index.html" />
+    <meta http-equiv="refresh" content="0; URL=src/php/index.php" />
     <link rel="stylesheet" href="../../resources/css/style.css" />
   </head>
   <body></body>
